deployzip/sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-visual-analytics-administration/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-visualAnalyticsAdministration
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-visual-analytics-administration
    sas.com/admin: namespace
  name: sas-visual-analytics-administration
spec:
  host: $(INGRESS_HOST)
  path: /visualAnalyticsAdministration
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-visual-analytics-administration
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-visualAnalyticsAdministration
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-visual-analytics-administration
    sas.com/admin: namespace
  name: sas-visual-analytics-administration-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /visualAnalyticsAdministration
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-visual-analytics-administration
  wildcardPolicy: Subdomain
